# ethereum-prover

./: .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rust-toolchain
.github/actions/publish-docker-image/: action.yaml
.github/release-please/: config.json  manifest.json
.github/tmp_disabled/: ci-release.yaml
.github/workflows/: ci-check.yaml  ci-release-please.yaml  ci-release.yaml  stage-build.yaml
artifacts/: app.text  build_metadata.txt
docker/ethereum-prover/: Dockerfile
ethereum_prover/: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md
ethereum_prover/configs/: ethproofs_prod.yaml  ethproofs_staging.yaml  local_debug.yaml
ethereum_prover/src/: cache.rs  lib.rs  main.rs  metrics.rs  observability.rs  types.rs  utils.rs
ethereum_prover/src/clients/: mod.rs
ethereum_prover/src/clients/ethproofs/: mod.rs
ethereum_prover/src/config/: cli.rs  mod.rs
ethereum_prover/src/prover/: cpu_witness.rs  gpu_prover.rs  mod.rs  oracle.rs  types.rs
ethereum_prover/src/tasks/: cache_manager.rs  cpu_witness.rs  eth_proofs_upload.rs  gpu_prove.rs  mod.rs
ethereum_prover/src/tasks/block_stream/: continuous.rs  mod.rs  single_block.rs
ethereum_prover/test_fixtures/blocks/24073997/: block.json  execution_witness.json
ethereum_prover/tests/: integration.rs
ethereum_prover/tests/common/: mod.rs
infra/: README.md  docker-compose.yml
infra/dashboards/: .gitignore  build.sh  package.json  tsconfig.json
infra/dashboards/src/: ethereum-prover-dashboard.ts
infra/grafana/dashboards/: ethereum-prover.json
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/grafana/provisioning/datasources/: datasource.yml
infra/prometheus/: prometheus.yml
proof_verifier_js/: CHANGELOG.md  README.md
proof_verifier_js/demo/: index.html  package.json  tsconfig.json  vite.config.ts
proof_verifier_js/demo/src/: App.vue
proof_verifier_js/ts/: CHANGELOG.md  README.md  package.json  tsconfig.json  tsup.config.ts
proof_verifier_js/ts/src/: index.ts
proof_verifier_js/wasm/: Cargo.toml  build.rs  build_for_ts.sh
proof_verifier_js/wasm/src/: lib.rs  unified_verifier.rs
scripts/: README.md  copy_artifacts.sh  rebuild_artifacts.sh  ubuntu_setup.sh
