[workspace]
resolver = "2"

members = [
    "proof_verifier_js/wasm"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/zksync-os/"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync", "zk", "risc-v"]
categories = ["cryptography"]

[workspace.dependencies]
blake2s_u32 = { git = "https://github.com/matter-labs/zksync-airbender", branch = "dev", default-features = false }
common_constants = { git = "https://github.com/matter-labs/zksync-airbender", branch = "dev" }
ruint = { version = "1.16", default-features = false }
arrayvec = { version = "0.7", default-features = false }
serde = { version = "1", default-features = false }

[profile.release_with_symbols]
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 1
debug = true

[profile.release.package."blake2_with_compression_verifier"]
opt-level = 1
codegen-units = 256
overflow-checks = true

[profile.release.package."zkos-wrapper"]
opt-level = 1
codegen-units = 256
overflow-checks = true

[profile.release]
opt-level = 3
lto = "thin"
# lto = true 
codegen-units = 16
# debug = false
debug = true
# This is needed for zksync-airbender crates to compile in a reasonable time for x86-64-unknown-linux-gnu
overflow-checks = true
