[package]
name = "proof_verifier_wasm"
version.workspace = true
edition = "2021"
license = "MIT OR Apache-2.0"

# Disabling `wasm-opt` makes the build faster, but the resulting wasm file is much larger.
# Uncommented now, because it takes too much time in CI -- dependency graph should be optimized,
# so that it doesn't take forever. In case of new release requied, comment the lines below.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = { version = "2", features = ["serde"] }
flate2 = "1"
getrandom = { version = "0.3", features = ["wasm_js"] }
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"

# Airbender does not currently expose a `unified_verifier_only_security_100`
# feature, so we keep the minimal unified verifier graph and select the
# 100-bit security config through `verifier_common` directly.
full_statement_verifier = { git = "https://github.com/matter-labs/zksync-airbender", branch = "dev", default-features = false, features = ["unified_verifier_only"] }
verifier_common = { git = "https://github.com/matter-labs/zksync-airbender", branch = "dev", default-features = false, features = ["proof_utils", "security_100"] }
prover = { git = "https://github.com/matter-labs/zksync-airbender", branch = "dev", default-features = false, features = ["definitions_only"] }
cs = { git = "https://github.com/matter-labs/zksync-airbender", branch = "dev", default-features = false, features = ["compiler"] }
field = { git = "https://github.com/matter-labs/zksync-airbender", branch = "dev", default-features = false, features = ["no_inline"] }

# full_statement_verifier = { path = "../../../zksync-airbender/full_statement_verifier", default-features = false, features = ["unified_verifier_only"] }
# verifier_common = { path = "../../../zksync-airbender/verifier_common", default-features = false, features = ["proof_utils", "security_100"] }
# prover = { path = "../../../zksync-airbender/prover", default-features = false, features = ["definitions_only"] }
# cs = { path = "../../../zksync-airbender/cs", default-features = false, features = ["compiler"] }
# field = { path = "../../../zksync-airbender/field", default-features = false, features = ["no_inline"] }
